basic structure done

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -263,8 +263,28 @@ footer{
 }
 
 .message{
+    width: 1140px;
+    height: 314px;
     background-image: url("../assets/handshake.jpg");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: ;
+    background-size: cover;
+    border-radius: 16px;
+    background: rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2);
+    margin: 42px 179px 150px 150px;
+}
+
+.message_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.credit_container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
 }
