--- a/styles/styles.css
+++ b/styles/styles.css
@@ -249,10 +249,16 @@ main{
 
 
 .inspiration_youtube_section{
-    border: 32px solid rgb(255, 255, 255);
+    width: 946px;
+    height: 550px;
+    border: 1px solid rgb(207, 208, 211);
     border-radius: 16px;
+    padding: 32px;
+}iframe{
+    border-radius: 16px;
+    width: 882px;
+    height: 486px;
 }
-
 
 
 /* -----------------------------------Current Target Styles--------------------------------- */
@@ -262,6 +268,7 @@ main{
     justify-content: center;
     align-items: start;
     height: 590px;
+    margin-top: 149px;
 }
 
 .target_content{
@@ -356,7 +363,7 @@ footer{
     background-position: center;
     background-size: cover;
     border-radius: 16px;
-    margin: 42px 179px 150px 150px;
+    margin: 42px 150px 79px 150px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -396,6 +403,9 @@ footer{
     justify-content: space-between;
     align-items: center;
     text-align: center;
+    background: rgba(13, 19, 33, 0.03);
+    width: 100%;
+    height: 36px;
 }
 
 
